Fixes alignment of changelog details

--- a/src/webviews/apps/scss/main.scss
+++ b/src/webviews/apps/scss/main.scss
@@ -489,6 +489,7 @@ ul {
     flex-direction: column;
 
     & p {
+        align-self: flex-start;
         margin-bottom: 0;
     }
 
